--- a/public/style.css
+++ b/public/style.css
@@ -40,7 +40,11 @@ body {
   padding: 24px;
   text-align: center;
   left: 0;
-  transition: left 0.5s ease-in-out;
+  transition: left 0.6s ease-in-out;
+}
+
+.welcome-container > * {
+  transition: opacity 0.2s ease-in-out;
 }
 
 /* ao arrastar o mouse */
@@ -84,7 +88,11 @@ body {
   align-items: center;
   color: #35a07a;
   left: 40%;
-  transition: left 0.5s ease-in-out;
+  transition: left 0.6s ease-in-out;
+}
+
+.form-container > * {
+  transition: opacity 0.2s ease-in-out;
 }
 
 .form-container::selection {
@@ -135,6 +143,7 @@ body {
 }
 
 .form-container .input-area {
+  position: relative;
   border: solid 1px transparent;
   margin-bottom: 12px;
   width: 300px;
@@ -230,4 +239,54 @@ body {
 
 .form-container.hidden > * {
   opacity: 0;
+}
+
+/* validação do formulário de registro */
+.input-email.invalid, 
+.input-password.invalid, 
+.input-confirm-password.invalid {
+  border: solid 1px #a94c4c;
+}
+
+/* display que mostra o erro a ser corrigido no input correspondente */
+.input-error.error {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.input-error {
+  display: none;
+  position: absolute;
+  right: -140px;
+  width: 120px;
+  height: 50px;
+  background-color: #a94c4c;
+  color: #242424;
+  font-weight: bold;
+  font-size: 14px;
+  padding: 4px;
+  border-radius: inherit;
+}
+
+.input-error::selection {
+  background-color: #242424;
+  color: #a94c4c;
+}
+
+.input-error span {
+  position: relative;
+  z-index: 2;
+}
+
+.input-error div {
+  z-index: 1;
+  position: absolute;
+  left: -5px;
+  bottom: 12.5px;
+  rotate: 45deg;
+  width: 25px;
+  height: 25px;
+  background-color: #a94c4c;
 }
