new errors on validation form*

--- a/public/style.css
+++ b/public/style.css
@@ -242,6 +242,7 @@ body {
 }
 
 /* validação do formulário de registro */
+.input-username.invalid,
 .input-email.invalid, 
 .input-password.invalid, 
 .input-confirm-password.invalid {
