--- a/public/views/login.html
+++ b/public/views/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../styles/login.css">
   <title></title>
 </head>
 <body>
@@ -29,13 +29,13 @@
     <div class="form-container sign-up-container">
       <h2>Create Account</h2>
       <div class="icons-area">
-        <div class="facebook-icon"><img src="./img/facebook-icon.png"></div>
-        <div class="google-icon"><img src="./img/google-icon.png"></div>
-        <div class="linkedin-icon"><img src="./img/linkedin-icon.png"></div>
+        <div class="facebook-icon"><img src="../img/facebook-icon.png"></div>
+        <div class="google-icon"><img src="../img/google-icon.png"></div>
+        <div class="linkedin-icon"><img src="../img/linkedin-icon.png"></div>
       </div>
       <p>or use your email to registration:</p>
       <div class="input-area input-username">
-        <img src="./img/user-icon.png">
+        <img src="../img/user-icon.png">
         <input id="username" type="text" placeholder="Username" required>
         <div class="input-error">
           <div></div>
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="input-area input-email">
-        <img src="./img/email-icon.png">
+        <img src="../img/email-icon.png">
         <input id="email" type="email" placeholder="Email" required>
         <div class="input-error">
           <div></div>
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="input-area input-password">
-        <img src="./img/padlock-icon.png">
+        <img src="../img/padlock-icon.png">
         <input id="password" type="password" placeholder="Password" required>
         <div class="input-error">
           <div></div>
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="input-area input-confirm-password">
-        <img src="./img/padlock-icon.png">
+        <img src="../img/padlock-icon.png">
         <input id="confirm-password" type="password" placeholder="Confirm Password" required>
         <div class="input-error">
           <div></div>
@@ -72,13 +72,13 @@
     <div class="form-container sign-in-container hide">
       <h2>Login Account</h2>
       <div class="icons-area">
-        <div class="facebook-icon"><img src="./img/facebook-icon.png"></div>
-        <div class="google-icon"><img src="./img/google-icon.png"></div>
-        <div class="linkedin-icon"><img src="./img/linkedin-icon.png"></div>
+        <div class="facebook-icon"><img src="../img/facebook-icon.png"></div>
+        <div class="google-icon"><img src="../img/google-icon.png"></div>
+        <div class="linkedin-icon"><img src="../img/linkedin-icon.png"></div>
       </div>
       <p>or use your email to logging:</p>
       <div class="input-area input-email-login">
-        <img src="./img/email-icon.png">
+        <img src="../img/email-icon.png">
         <input id="email-login" type="email" placeholder="Email" required>
         <div class="input-error">
           <div></div>
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="input-area input-password-login">
-        <img src="./img/padlock-icon.png">
+        <img src="../img/padlock-icon.png">
         <input id="password-login" type="password" placeholder="Password" required>
         <div class="input-error">
           <div></div>
@@ -98,6 +98,6 @@
 
   </div>
 
-  <script src="./script.js" type="module"></script>
+  <script src="../js/login.js" type="module"></script>
 </body>
 </html>
