--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: var(--font);
 }
 
 body {
@@ -12,9 +13,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: var(--font);
-}
-
-.container {
-  
+  background-color: var(--bg-black);
+  color: var(--text-green);
 }
