--- a/public/views/login.html
+++ b/public/views/login.html
@@ -53,6 +53,7 @@
       <div class="input-area input-password">
         <img src="../img/padlock-icon.png">
         <input id="password" type="password" placeholder="Password" required>
+        <img src="../img/show-password.png" class="show-password">
         <div class="input-error">
           <div></div>
           <span></span>
@@ -61,6 +62,7 @@
       <div class="input-area input-confirm-password">
         <img src="../img/padlock-icon.png">
         <input id="confirm-password" type="password" placeholder="Confirm Password" required>
+        <img src="../img/show-password.png" class="show-password">
         <div class="input-error">
           <div></div>
           <span></span>
@@ -88,6 +90,7 @@
       <div class="input-area input-password-login">
         <img src="../img/padlock-icon.png">
         <input id="password-login" type="password" placeholder="Password" required>
+        <img src="../img/show-password.png" class="show-password">
         <div class="input-error">
           <div></div>
           <span></span>
