--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -133,11 +133,17 @@ body {
 }
 
 .show-password {
-  opacity: 0.5;
-  cursor: pointer;
+  opacity: 0;
+  pointer-events: none;
 }
 
-.show-password.show {
+.input-area.active .show-password {
+  opacity: 0.5;
+  cursor: pointer;
+  pointer-events: auto;
+}
+
+.input-area.active .show-password.show {
   opacity: 1;
 }
 
