--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -1,4 +1,5 @@
 @import url("./root.css");
+@import "./header.css";
 
 * {
   padding: 0;
@@ -11,8 +12,12 @@ body {
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--bg-black);
+  flex-direction: column;
+  background-color: #121212;
   color: var(--text-green);
+}
+
+body::selection {
+  background-color: var(--bg-green);
+  color: var(--text-black);
 }
