--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -8,8 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="welcome"><span></span></h1>
   </div>
-  <script src="../js/profile.js"></script>
+  <script type="module" src="../js/profile.js"></script>
 </body>
 </html>
