path utils and login test

--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -4,6 +4,7 @@
   --font: "Montserrat", sans-serif;
   --bg-black: #242424;
   --bg-green: #35a07a;
+  --bg-green-hover: #308e6d;
   --text-black: #242424;
   --text-green: #35a07a;
   --text-green-hover: #308e6d;
