--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -34,23 +34,31 @@ header {
   display: flex;
   align-items: center;
   border: 1px solid var(--bg-green);
-  padding-right: 4px;
+  background-color: var(--bg-green);
+  color: var(--text-black);
+  padding-left: 4px;
   border-radius: 4px;
   cursor: pointer;
 }
 
+.profile-area:hover {
+  background-color: var(--bg-green-hover);
+  border: 1px solid var(--bg-green-hover);
+}
+
 .profile-img {
-  width: 35px;
-  height: 35px;
-  margin-right: 8px;
-  border-top-left-radius: inherit;
-  border-bottom-left-radius: inherit;
-  border-right: 1px solid var(--bg-green)
+  display: flex;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  margin-left: 4px;
+  border-top-right-radius: inherit;
+  border-bottom-right-radius: inherit;
 }
 
 .profile-img img {
   width: 100%;
   height: 100%;
-  border-top-left-radius: inherit;
-  border-bottom-left-radius: inherit;
+  border-top-right-radius: inherit;
+  border-bottom-right-radius: inherit;
 }
