--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -29,8 +29,9 @@ header {
 .explore-area span:hover {
   border-bottom: 2px solid var(--bg-green);
 }
-
+/* profile-area só aparece quando logado. login-area só aparece quando deslogado. */
 .profile-area, .login-area {
+  position: relative;
   display: flex;
   align-items: center;
   border: 1px solid var(--bg-green);
@@ -39,6 +40,7 @@ header {
   padding-left: 4px;
   border-radius: 4px;
   cursor: pointer;
+  user-select: none;
 }
 
 .profile-area:hover, .login-area:hover {
@@ -71,4 +73,31 @@ a {
   padding-right: 4px;
   height: 30px;
   font-weight: bold;
+}
+
+/* opções do ícone do perfil QUANDO LOGADO. */
+.profile-options {
+  display: none;
+}
+
+.profile-options.show {
+  position: absolute;
+  background-color: var(--bg-green);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  right: 0;
+  width: 120px;
+}
+
+.profile-options div {
+  width: 100%;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-options div:hover {
+  background-color: var(--bg-green-hover);
 }
