--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -21,3 +21,76 @@ body::selection {
   background-color: var(--bg-green);
   color: var(--text-black);
 }
+
+.banner {
+  margin-top: 5em;
+  height: 70%;
+  width: 100%;
+  background-color: var(--bg-green);
+}
+
+.banner-container {
+  position: relative;
+  height: 100%;
+  width: 75%;
+  margin: 0 auto;
+  color: var(--text-black);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.banner-container::selection {
+  background-color: var(--bg-black);
+  color: var(--text-green);
+}
+
+.banner-container > * {
+  margin-bottom: 8px;
+}
+
+.container {
+  height: 100%;
+  width: 75%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.profile-area {
+  position: relative;
+  width: 35%;
+  background-color: var(--bg-black);
+  top: -50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 8px;
+}
+
+.profile-area img {
+  position: relative;
+  top: -50px;
+  width: 250px;
+  height: 250px;
+  border-radius: 100%;
+  border: 3px solid #121212;
+}
+
+.profile-area h2 {
+  position: relative;
+  top: -25px;
+}
+
+.profile-info {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 75%;
+}
+
+.profile-info > * {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
