--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -63,6 +63,7 @@ header {
   height: 100%;
   border-top-right-radius: inherit;
   border-bottom-right-radius: inherit;
+  object-fit: cover;
 }
 
 a {
