--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -122,3 +122,131 @@ body::selection {
 .edit-profile-btn:hover {
   background-color: var(--bg-green-hover);
 }
+
+@media (min-width: 1024px) {
+  .profile-area-mobile {
+    display: none;
+  }
+
+  .banner-container .edit-profile-btn {
+    display: none;
+  }
+}
+
+@media (max-width: 1023px) and (min-width: 768px) {
+  .profile-area-mobile {
+    display: none;
+  }
+
+  .banner-container {
+    width: 85%;
+  }
+
+  .container {
+    width: 85%;
+  }
+
+  .profile-area img {
+    width: 150px;
+    height: 150px;
+  }
+
+  .profile-area h2 {
+    font-size: 20px;
+  }
+
+  .profile-info {
+    flex-direction: column;
+  }
+
+  .profile-info > * {
+    margin-bottom: 12px;
+  }
+
+  .edit-profile-btn {
+    font-size: 14px;
+  }
+
+  .banner-container .edit-profile-btn {
+    display: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .banner-container {
+    width: 90%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .banner-infos {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .banner-infos .edit-profile-btn {
+    padding: .5em 2.5em;
+    font-size: 14px;
+    background-color: (--bg-black);
+  }
+
+  .profile-area-mobile {
+    width: 250px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .profile-area-mobile h2 {
+    font-size: 20px;
+  }
+
+  .profile-area-mobile img {
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    border: 3px solid var(--bg-black);
+    object-fit: cover;
+  }
+
+  #edit-profile-btn-mobile {
+    padding: .5em 2.5em;
+    font-size: 12px;
+    background-color: var(--bg-black);
+    color: var(--text-green);
+  }
+
+  #edit-profile-btn-mobile:active {
+    background-color: #121212;
+  }
+
+  .profile-area-mobile .profile-info {
+    width: 100%;
+    font-size: 12px;
+  }
+
+  .profile-name {
+    font-size: 24px;
+  }
+
+  .profile-bio {
+    font-size: 16px;
+  }
+
+  .container {
+    width: 90%;
+  }
+
+  .profile-content {
+    width: 100%;
+  }
+
+  .profile-area {
+    display: none;
+  }
+
+}
