profile options bug fixed

--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -39,6 +39,8 @@ body::selection {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  z-index: 1;
+  pointer-events: none;
 }
 
 .banner-container::selection {
